[fix]: icon jump and menu space

--- a/Server/Blog/static/base.css
+++ b/Server/Blog/static/base.css
@@ -6,7 +6,7 @@
 }
 a {
     text-decoration: none !important; 
-    color: black;
+    color: black !important;
 }
 
 body {
@@ -38,6 +38,9 @@ body::-webkit-scrollbar-thumb:hover {
     justify-content:space-between;
     padding: 10px;
 }
+.contenedor-logo {
+    display: flex;
+}
 .contenedor-logo>img {
     width: 70px;
     height: 70px;
@@ -47,7 +50,8 @@ body::-webkit-scrollbar-thumb:hover {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-decoration: none;
     color: orange;
-    padding-top: 65px;
+    position: relative;
+    top: 40%;
     justify-items: left;
 }
 
@@ -146,12 +150,12 @@ i{
 }
 .menu>a {
     width: 100%;
-    height: 20px;
+    height: 26px;
     padding: auto;
     text-align: center;
 }
 .menu>a:hover {
-    background-color: #888;
+    background-color: #ccc;
 }
 .active {
     opacity: 1;
